Fixed horizontal scrollbar issue, close icon for mobile menu positioning

--- a/app/assets/styles/modules/_blog-section.css
+++ b/app/assets/styles/modules/_blog-section.css
@@ -10,7 +10,10 @@
         width: 100%;
     }
     .post {
-        flex-basis: percentage(1/3);
+        flex-basis: 100%;
+        @mixin atMedium {
+            flex-basis: percentage(1/3);
+        }
         padding: 10px;
         position: relative;
         .blog-content {
