--- a/app/assets/styles/modules/_image-grid.css
+++ b/app/assets/styles/modules/_image-grid.css
@@ -114,7 +114,7 @@
         }
     }
     .grid-item {
-        width: 100%;
+        width: calc(100% - 10px);
         padding: 35px;
         position: absolute;
         &.center {
